<resources>
    <string name="app_name">Image Space</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="photo_label">photo</string>
    <string name="next">Next</string>
    <string name="enter_login">Enter login</string>
    <string name="enter_password">Enter password</string>
    <string name="discover">Discover</string>
    <string name="search">Search</string>
    <string name="upload_photo">Upload photo</string>
    <string name="profile">Profile</string>
    <string name="chats">Chats</string>
    <string name="what_s_new_today">What’s new today</string>
</resources>