<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/discover"
        android:icon="@drawable/discover_selector"
        android:title="@string/discover" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/search_selector"
        android:title="@string/search" />
    <item
        android:id="@+id/add_photo"
        android:icon="@drawable/add_photo_selector"
        android:onClick="onUploadPhotoClick"
        android:title="@string/upload_photo" />
    <item
        android:id="@+id/chat"
        android:icon="@drawable/chat_selector"
        android:title="@string/chats" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/profile_selector"
        android:title="@string/profile" />
</menu>