<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/small_padding"
        tools:context=".ui.onboarding.registration.RegistrationFragment">

        <View
            android:id="@+id/v_focus"
            android:layout_width="wrap_content"
            android:focusableInTouchMode="true"
            android:layout_height="0dp"
            android:focusable="true" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TV.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_login"
            style="@style/ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_margin"
            android:hint="@string/enter_login"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            style="@style/ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:hint="@string/enter_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            style="@style/BTN.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/next" />
    </LinearLayout>
</layout>